[FIX] Fixed layout issues in Composer (esp. read-only)

--- a/src/com/bkahlert/devel/nebula/widgets/composer/html/style.css
+++ b/src/com/bkahlert/devel/nebula/widgets/composer/html/style.css
@@ -9,9 +9,12 @@ html, body, h1, h2, h3, h4, h5, h6, div, span, blockquote, p, address, form, fie
 }
 
 body {
-    padding: 10px 10px;
-    width: 960px;
-    margin: 0 auto;
+    padding: 0;
+    margin: 0;
+}
+
+.cke_chrome {
+	border: none !important;
 }
 
 input, textarea, select, option, optgroup, button, td, th {
